--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,14 @@
             var num = document.getElementById("n1");
             num.value = Math.pow(num.value, 3);
         }
+
+
+
+
+        function sin() {
+            var num = document.getElementById("n1");
+            num.value = Math.sin(num.value);
+        }
     </script>
 </head>
 
@@ -18,6 +26,14 @@
     <input type="text" id="n1" />
     <p>
         <button onclick="cube()">x^3</button>
+    </p>
+
+
+
+
+
+    <p>
+        <button onclick="sin()"> sin(x) </button>
     </p>
 </body>
 
