--- a/calculator.html
+++ b/calculator.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Calculator</title>
     <meta charset="utf-8" />
     <script type="text/javascript">
-        function cube() {
-            var num = document.getElementById("n1");
-            num.value = Math.pow(num.value, 3);
-        }
+      function cube() {
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 3);
+      }
 
-        function sin() {
-            var num = document.getElementById("n1");
-            num.value = Math.sin(num.value);
-        }
+      function sin() {
+        var num = document.getElementById("n1");
+        num.value = Math.sin(num.value);
+      }
 
-        function quad() {
-            var num = document.getElementById("n1");
-            num.value = Math.pow(num.value, 4);
-        }
+      function quad() {
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 4);
+      }
+      function cube() {
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 3);
+      }
+      function cuadrado() {
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 2);
+      }
     </script>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Calculadora de Jose Antonio Contreras Correa</h1>
     Number:
     <input type="text" id="n1" />
     <p>
-        <button onclick="cube()">x^3</button>
+      <button onclick="cube()">x^3</button>
     </p>
 
     <p>
-        <button onclick="sin()"> sin(x) </button>
+      <button onclick="sin()">sin(x)</button>
     </p>
 
     <p>
-        <button onclick="quad()"> x^4 </button>
+      <button onclick="quad()">x^4</button>
     </p>
-</body>
 
+    <p>
+      <button onclick="cuadrado()">x^2</button>
+    </p>
+  </body>
 </html>
