--- a/calculator.html
+++ b/calculator.html
@@ -26,6 +26,10 @@
         var num = document.getElementById("n1");
         num.value = Math.pow(num.value, 2);
       }
+      function division() {
+        var num = document.getElementById("n1");
+        num.value = 1 / num.value;
+      }
     </script>
   </head>
 
@@ -47,6 +51,9 @@
 
     <p>
       <button onclick="cuadrado()">x^2</button>
+    </p>
+    <p>
+      <button onclick="division()">1/x</button>
     </p>
   </body>
 </html>
